Completed heatmap of starting locations

--- a/citibike_project/Citibike_Project_Starting.Rmd
+++ b/citibike_project/Citibike_Project_Starting.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Explore Citi Bike Data"
-output: html_notebook
+output:
+  html_document:
+    df_print: paged
 ---
 
 ### Citi Bike Data
