calculating distance between start and end points using geosphere

--- a/citibike_project/Citibike_Project_Starting.Rmd
+++ b/citibike_project/Citibike_Project_Starting.Rmd
@@ -89,7 +89,10 @@ As you write your code that edits the data frame, consider printing the head of 
 
 ```{r}
 # Try creating a distance column in your data frame here:
-
+# First install (in console) geosphere package and load into the workspace
+short_trips <- short_trips %>%
+              mutate(distance=distHaversine(c(start.station.longitude, start.station.latitude),c(end.station.longitude,end.station.latitude))
+short_trips
 ```
 
 There are many different strategies to calculate the distance between two points. The simplest way to do this would be to find the length of the straight line between the two points. This is a massive assumption to make &mdash; it would be remarkable if any of these bike trips traveled in a straight line between the two points without making any turns or curves.
