--- a/citibike_project/Citibike_Project_Starting.Rmd
+++ b/citibike_project/Citibike_Project_Starting.Rmd
@@ -107,6 +107,7 @@ If you get stuck, use `?distHaversine` to check the documentation to see more ex
 
 ```{r}
 # Use the geosphere library to create a distance column
+library(geosphere)
 starting_stations <- short_trips %>%
                     select(start.station.latitude,start.station.longitude)
 ending_stations <- short_trips %>%
@@ -186,7 +187,10 @@ Find your line of code that grouped our data by `age`. Copy it, but add `gender`
 
 ```{r}
 # Use group_by() again to group by both age and gender
-
+average_speed_by_age_and_gender <- short_trips %>%
+                      group_by(age,gender) %>%
+                      summarize(mean_speed=mean(speed, na.rm = TRUE))
+average_speed_by_age_and_gender
 
 ```
 
@@ -198,7 +202,15 @@ Note that this graph won't quite be what we want yet, but we're getting close!
 
 ```{r}
 # Make a line graph of your new filtered data frame
-
+age_80_gender <- average_speed_by_age_and_gender %>%
+                filter(age<80)
+age_80_gender
+avg_Spd_Lingrph_80_gender <- ggplot(age_80_gender) +
+                    geom_line(aes(x=age,y=mean_speed,color = gender)) +
+                    labs(title = "Average Speed of riders below 80 years",
+                         x="Age of Riders", y="Average Speed of Riders")
+                    
+avg_Spd_Lingrph_80_gender
 
 ```
 
@@ -212,7 +224,14 @@ Then redraw your graph.
 
 ```{r warning=FALSE}
 # Use mutate() and as.factor() to change the gender column into a factor.
-
+age_80_gender <- age_80_gender %>%
+                          mutate(gender=as.factor(gender))
+age_80_gender
+avg_Spd_Lingrph_80_gender <- ggplot(age_80_gender) +
+                    geom_line(aes(x=age,y=mean_speed,color = gender)) +
+                    labs(title = "Average Speed of riders below 80 years",
+                         x="Age of Riders", y="Average Speed of Riders") 
+avg_Spd_Lingrph_80_gender
 
 ```
 
@@ -222,8 +241,18 @@ For our final version of this graph, we filtered out the users with a gender of 
 
 ```{r}
 # Filter the data frame to only include genders 1 and 2. Set appropriate labels for the legend
-
-
+age_80_gender <- age_80_gender %>%
+                          
+                          filter((gender==1)|(gender==2))
+age_80_gender
+avg_Spd_Lingrph_80_gender <- ggplot(age_80_gender) +
+                    geom_line(aes(x=age,y=mean_speed,color = gender)) +
+                    labs(title = "Average Speed of riders below 80 years",
+                         x="Age of Riders", y="Average Speed of Riders") + 
+                    theme(plot.title = element_text(hjust = 0.5))
+      scale_color_discrete(name = "Gender", labels=c("Male Identifying","Female Identifying"))
+                    
+avg_Spd_Lingrph_80_gender
 ```
 
 ### Making a Stacked Bar Plot Of Ages
@@ -234,14 +263,17 @@ Let's start by using our `short_trips` dataset. We'll want to call `group_by()` 
 
 ```{r}
 # Create the age_counts data frame
-
+age_counts <- short_trips %>%
+            group_by(age,gender) %>%
+            tally()
+age_counts
 ```
 
 If you look at the head of this new data frame, you'll see the counts are stored in a column named `n`. Let's now use `ggplot()` and `geom_col()` to create a stacked bar plot. `ggplot()` should have an `aes()` where `x = age`, `y = n` and `fill = gender`.
 
 ```{r}
 # Create the stacked bar plot
-
+age_counts %>% ggplot(aes(x=age,y=n, fill = gender))  + geom_col()
 ```
 
 Great! There are some tweaks that we might want to make to this graph. First, gender right now is represented as an integer. It will make more sense if that column is represented as a factor. To do this, we can pass `as.factor(gender)` as the value for the x axis.
@@ -252,7 +284,7 @@ Finally, we labeled and titled our graph using `labs()` and `scale_fill_discrete
 
 ```{r}
 # Filter and label your graph
-
+age_counts %>% filter(gender==1|gender==2, age<100) %>% ggplot(aes(x = age, y = n, fill = as.factor(gender))) + geom_col() + labs(title = "Citi Bike Users By Age And Gender", x = "Age", y = "Count") + theme(plot.title = element_text(hjust = 0.5)) + scale_fill_discrete(name="Gender", labels = c("Male Identifying","Female Identifying"))
 ```
 
 ### Further Work
