--- a/psid_project/psid_project.Rmd
+++ b/psid_project/psid_project.Rmd
@@ -176,7 +176,9 @@ summary(model_2)
 
 
 ```{r}
-
+# extract education coefficent
+education_coefficient <- model_2$coefficients[2]
+education_coefficient
 ```
 
 
